# toml-fmt

./: tox.toml
py-common/: pyproject.toml  tox.toml
py-common/src/toml_fmt_common/: __init__.py
py-common/tests/: test_app.py
pyproject-fmt/src/pyproject_fmt/: __init__.py  __main__.py  toml_fmt_common
